--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^0.11.7",
     "graphql-tools": "^2.3.0",
     "knex": "^0.13.0",
-    "mssql": "3.3.0"
+    "mssql": "3.3.0",
+    "sqlite3": "^3.1.13"
   }
 }
