--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql-tools": "^2.3.0",
     "knex": "^0.13.0",
     "mssql": "3.3.0",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "^3.1.13",
+    "uuid": "^3.1.0"
   }
 }
